[gd_scene load_steps=17 format=3 uid="uid://bl436gckk8vgc"]

[ext_resource type="Script" uid="uid://c8byylpetejls" path="res://Scripts/Enemies/ant_hill.gd" id="1_5gihl"]
[ext_resource type="Shader" uid="uid://c7iqiau8etjar" path="res://Assets/Shaders/flashSprite.gdshader" id="2_67sa6"]
[ext_resource type="PackedScene" uid="uid://dm3r6fw0s1ymd" path="res://Nodes/Enemys/!global_behaviour.tscn" id="2_uhs7a"]
[ext_resource type="Texture2D" uid="uid://c5nj18vurctkw" path="res://Assets/Images/antHill.png" id="4_5gihl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5gihl"]
radius = 474.27

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5gihl"]
resource_local_to_scene = true
shader = ExtResource("2_67sa6")
shader_parameter/sourceColor = Color(1, 1, 1, 1)
shader_parameter/hint = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mb7fv"]
atlas = ExtResource("4_5gihl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_glpr1"]
atlas = ExtResource("4_5gihl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gihl"]
atlas = ExtResource("4_5gihl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbjbf"]
atlas = ExtResource("4_5gihl")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_uhs7a"]
animations = [{
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_mb7fv")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_glpr1")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gihl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbjbf")
}],
"loop": false,
"name": &"Shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67sa6"]
size = Vector2(48, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uhs7a"]
size = Vector2(48, 40)

[sub_resource type="Animation" id="Animation_b7jkp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/hint")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gpsv4"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/hint")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:material:shader_parameter/sourceColor")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xgmc1"]
_data = {
&"RESET": SubResource("Animation_b7jkp"),
&"hit": SubResource("Animation_gpsv4")
}

[node name="AntHill" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
script = ExtResource("1_5gihl")

[node name="GlobalBehaviour" parent="." instance=ExtResource("2_uhs7a")]
health = 50.0
canOverlap = true
has_knockback = false

[node name="AlertArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlertArea"]
shape = SubResource("CircleShape2D_5gihl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_5gihl")
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_uhs7a")
animation = &"Shoot"
frame = 1
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_67sa6")
debug_color = Color(0.77258, 0.443014, 3.85046e-07, 0.42)

[node name="Hitbox" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_uhs7a")

[node name="hitAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xgmc1")
}

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="area_entered" from="AlertArea" to="." method="_on_alert_area_area_entered"]
[connection signal="area_exited" from="AlertArea" to="." method="_on_alert_area_area_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
